fix homepage spacing

--- a/src/www/pages/templates/homepage/homepage.scss
+++ b/src/www/pages/templates/homepage/homepage.scss
@@ -1,4 +1,6 @@
 .homepage {
+  margin-bottom: $size-xl;
+
   .what-we-do {
     svg {
       display: block;
@@ -25,6 +27,39 @@
     @media screen and (max-width: $breakpoint-sm) {
       padding: 0 $size-sm;
     }
+  }
+
+  .thirds {
+    .wmcads-col-sm-1-2:last-of-type {
+      @media screen and (max-width: $breakpoint-md) {
+        margin-top: $size-lg;
+      }
+    }
+  }
+
+  .news {
+    .wmcads-col-md-12-24 {
+      padding-right: $size-lg;
+      @media screen and (max-width: $breakpoint-md) {
+        margin-bottom: $size-lg;
+        padding-right: 0;
+      }
+    }
+
+    .wmcads-col-sm-1-2:nth-child(2) {
+      padding-right: $size-md;
+      @media screen and (max-width: $breakpoint-md) {
+        padding-right: 0;
+      }
+    }
+
+    .wmcads-col-sm-1-2:nth-child(3) {
+      padding-left: $size-md;
+      @media screen and (max-width: $breakpoint-md) {
+        padding-left: 0;
+      }
+    }
+
   }
 }
 
